syntax = "proto3";

package dummy.api;

// The dummy scanner service definition.
service DummyScanner {
  // Scan a file
  rpc ScanFile(ScanFileRequest) returns (ScanResponse) {}
}

// The scan file request message containing the file path to scan.
message ScanFileRequest { string filepath = 1; }

// The scan response message containing detection results of the antiVirus.
message ScanResponse {
  string output = 1;
  bool infected = 2;
  int64 update = 3;
}
